# cpp-technical-exercise

./: .gitignore  CMakeLists.txt  README.md
.vscode.example/: launch.json  settings.json
data/: sample_data.txt
includes/: Accelerometer.h  AccelerometerFile.h  AccelerometerProcessor.h  custom_time.h  logger.h
logs/: log1.txt
src/: AccelerometerProcessor.cpp  custom_time.cpp  main.cpp
templates/: config.h.in
